--- a/Part_1/part_1.ipynb
+++ b/Part_1/part_1.ipynb
@@ -4373,7 +4373,7 @@
     "# Сформируем датасет из созданной excel-книги по условию \"за 2020 год\" с помощью созданного инструмента tools.add_col и сохраним его в формате csv:\n",
     "file = './data/soc_pasport.xlsx'\n",
     "\n",
-    "df = pd.concat([add_col(file, 'population', 'A, W'),\n",
+    "df = pd.concat([add_col(file, 'population', 'W'),\n",
     "                        add_col(file, 'area', 'B'),\n",
     "                        add_col(file, 'living_area', 'B'),\n",
     "                        add_col(file, 'per_capita', 'G'),\n",
@@ -4530,7 +4530,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>(Алтайский край, Алтайский край)</th>\n",
+       "      <th>Алтайский край</th>\n",
        "      <td>2317153</td>\n",
        "      <td>167996</td>\n",
        "      <td>18.0</td>\n",
@@ -4554,7 +4554,7 @@
        "      <td>3.678839e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>(Амурская область, Амурская область)</th>\n",
+       "      <th>Амурская область</th>\n",
        "      <td>790044</td>\n",
        "      <td>361908</td>\n",
        "      <td>17.3</td>\n",
@@ -4578,7 +4578,7 @@
        "      <td>5.120936e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>(Архангельская область без Ненецкого АО, Архангельская область без Ненецкого АО)</th>\n",
+       "      <th>Архангельская область без Ненецкого АО</th>\n",
        "      <td>1092424</td>\n",
        "      <td>413103</td>\n",
        "      <td>16.9</td>\n",
@@ -4607,89 +4607,53 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                    population    area  \\\n",
-       "region                                                                   \n",
-       "(Алтайский край, Алтайский край)                       2317153  167996   \n",
-       "(Амурская область, Амурская область)                    790044  361908   \n",
-       "(Архангельская область без Ненецкого АО, Арханг...     1092424  413103   \n",
+       "                                        population    area  living_area  \\\n",
+       "region                                                                    \n",
+       "Алтайский край                             2317153  167996         18.0   \n",
+       "Амурская область                            790044  361908         17.3   \n",
+       "Архангельская область без Ненецкого АО     1092424  413103         16.9   \n",
        "\n",
-       "                                                    living_area  per_capita  \\\n",
-       "region                                                                        \n",
-       "(Алтайский край, Алтайский край)                           18.0       23864   \n",
-       "(Амурская область, Амурская область)                       17.3       35499   \n",
-       "(Архангельская область без Ненецкого АО, Арханг...         16.9       34852   \n",
-       "\n",
-       "                                                    real_incomes  formal_wage  \\\n",
+       "                                        per_capita  real_incomes  formal_wage  \\\n",
        "region                                                                          \n",
-       "(Алтайский край, Алтайский край)                            95.5        30072   \n",
-       "(Амурская область, Амурская область)                       100.3        52430   \n",
-       "(Архангельская область без Ненецкого АО, Арханг...          98.4        52779   \n",
+       "Алтайский край                               23864          95.5        30072   \n",
+       "Амурская область                             35499         100.3        52430   \n",
+       "Архангельская область без Ненецкого АО       34852          98.4        52779   \n",
        "\n",
-       "                                                    real_pay      gdpp  \\\n",
-       "region                                                                   \n",
-       "(Алтайский край, Алтайский край)                       103.8  291156.9   \n",
-       "(Амурская область, Амурская область)                   105.2  571362.1   \n",
-       "(Архангельская область без Ненецкого АО, Арханг...     102.9  514200.4   \n",
+       "                                        real_pay      gdpp        income  \\\n",
+       "region                                                                     \n",
+       "Алтайский край                             103.8  291156.9  56637.879730   \n",
+       "Амурская область                           105.2  571362.1  51571.555319   \n",
+       "Архангельская область без Ненецкого АО     102.9  514200.4  52963.993010   \n",
        "\n",
-       "                                                          income  \\\n",
-       "region                                                             \n",
-       "(Алтайский край, Алтайский край)                    56637.879730   \n",
-       "(Амурская область, Амурская область)                51571.555319   \n",
-       "(Архангельская область без Ненецкого АО, Арханг...  52963.993010   \n",
+       "                                           subsidies  ...  respiratory  \\\n",
+       "region                                                ...                \n",
+       "Алтайский край                          74306.235370  ...       57.302   \n",
+       "Амурская область                        34011.885547  ...       30.788   \n",
+       "Архангельская область без Ненецкого АО  42447.952872  ...       88.038   \n",
        "\n",
-       "                                                       subsidies  ...  \\\n",
-       "region                                                            ...   \n",
-       "(Алтайский край, Алтайский край)                    74306.235370  ...   \n",
-       "(Амурская область, Амурская область)                34011.885547  ...   \n",
-       "(Архангельская область без Ненецкого АО, Арханг...  42447.952872  ...   \n",
+       "                                        neoplasms  disabled_18_60    density  \\\n",
+       "region                                                                         \n",
+       "Алтайский край                             10.293           61378  13.792906   \n",
+       "Амурская область                            3.568           25069   2.182997   \n",
+       "Архангельская область без Ненецкого АО     16.234           26984   2.644435   \n",
        "\n",
-       "                                                    respiratory  neoplasms  \\\n",
-       "region                                                                       \n",
-       "(Алтайский край, Алтайский край)                         57.302     10.293   \n",
-       "(Амурская область, Амурская область)                     30.788      3.568   \n",
-       "(Архангельская область без Ненецкого АО, Арханг...       88.038     16.234   \n",
+       "                                         spec_mining  spec_manufact  \\\n",
+       "region                                                                \n",
+       "Алтайский край                          3.947148e+06   1.561745e+08   \n",
+       "Амурская область                        1.477420e+08   4.948314e+07   \n",
+       "Архангельская область без Ненецкого АО  2.810097e+07   2.372191e+08   \n",
        "\n",
-       "                                                    disabled_18_60    density  \\\n",
-       "region                                                                          \n",
-       "(Алтайский край, Алтайский край)                             61378  13.792906   \n",
-       "(Амурская область, Амурская область)                         25069   2.182997   \n",
-       "(Архангельская область без Ненецкого АО, Арханг...           26984   2.644435   \n",
+       "                                         spec_indust  spec_water_supply  \\\n",
+       "region                                                                    \n",
+       "Алтайский край                          1.839420e+08       4.511748e+06   \n",
+       "Амурская область                        2.560468e+08       4.393894e+06   \n",
+       "Архангельская область без Ненецкого АО  3.039603e+08       5.356946e+06   \n",
        "\n",
-       "                                                     spec_mining  \\\n",
-       "region                                                             \n",
-       "(Алтайский край, Алтайский край)                    3.947148e+06   \n",
-       "(Амурская область, Амурская область)                1.477420e+08   \n",
-       "(Архангельская область без Ненецкого АО, Арханг...  2.810097e+07   \n",
-       "\n",
-       "                                                    spec_manufact  \\\n",
-       "region                                                              \n",
-       "(Алтайский край, Алтайский край)                     1.561745e+08   \n",
-       "(Амурская область, Амурская область)                 4.948314e+07   \n",
-       "(Архангельская область без Ненецкого АО, Арханг...   2.372191e+08   \n",
-       "\n",
-       "                                                     spec_indust  \\\n",
-       "region                                                             \n",
-       "(Алтайский край, Алтайский край)                    1.839420e+08   \n",
-       "(Амурская область, Амурская область)                2.560468e+08   \n",
-       "(Архангельская область без Ненецкого АО, Арханг...  3.039603e+08   \n",
-       "\n",
-       "                                                    spec_water_supply  \\\n",
-       "region                                                                  \n",
-       "(Алтайский край, Алтайский край)                         4.511748e+06   \n",
-       "(Амурская область, Амурская область)                     4.393894e+06   \n",
-       "(Архангельская область без Ненецкого АО, Арханг...       5.356946e+06   \n",
-       "\n",
-       "                                                    spec_provision  \\\n",
-       "region                                                               \n",
-       "(Алтайский край, Алтайский край)                      1.930862e+07   \n",
-       "(Амурская область, Амурская область)                  5.442775e+07   \n",
-       "(Архангельская область без Ненецкого АО, Арханг...    3.328323e+07   \n",
-       "\n",
-       "                                                    spec_reg_prod  \n",
-       "region                                                             \n",
-       "(Алтайский край, Алтайский край)                     3.678839e+08  \n",
-       "(Амурская область, Амурская область)                 5.120936e+08  \n",
-       "(Архангельская область без Ненецкого АО, Арханг...   6.079205e+08  \n",
+       "                                        spec_provision  spec_reg_prod  \n",
+       "region                                                                 \n",
+       "Алтайский край                            1.930862e+07   3.678839e+08  \n",
+       "Амурская область                          5.442775e+07   5.120936e+08  \n",
+       "Архангельская область без Ненецкого АО    3.328323e+07   6.079205e+08  \n",
        "\n",
        "[3 rows x 45 columns]"
       ]
