change files Part_1 Part_2 Part_3

--- a/Part_1/part_1.ipynb
+++ b/Part_1/part_1.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1415,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1568,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1798,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1826,7 +1826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1943,7 +1943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2060,7 +2060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2187,7 +2187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2212,7 +2212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2312,7 +2312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2412,7 +2412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2523,7 +2523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2542,7 +2542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2671,7 +2671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2803,7 +2803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2945,7 +2945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -3052,7 +3052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -3274,7 +3274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -3499,7 +3499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -3748,7 +3748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -3916,7 +3916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -4042,7 +4042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -4168,7 +4168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -4312,7 +4312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4370,7 +4370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4428,7 +4428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4438,7 +4438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4449,22 +4449,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "# добавим удельный объем регионального производства на душу населения (руб.)\n",
-    "df['spec_mining'] = df['mining'] / df['population']*1e3\n",
-    "df['spec_manufact'] = df['manufact'] / df['population']*1e3\n",
-    "df['spec_indust'] = df['indust'] / df['population']*1e3\n",
-    "df['spec_water_supply'] = df['water_supply'] / df['population']*1e3\n",
-    "df['spec_provision'] = df['provision'] / df['population']*1e3\n",
-    "df['spec_reg_prod'] = df['reg_prod_total'] / df['population']*1e3"
+    "df['spec_mining'] = df['mining'] / df['population']\n",
+    "df['spec_manufact'] = df['manufact'] / df['population']\n",
+    "df['spec_indust'] = df['indust'] / df['population']\n",
+    "df['spec_water_supply'] = df['water_supply'] / df['population']\n",
+    "df['spec_provision'] = df['provision'] / df['population']\n",
+    "df['spec_reg_prod'] = df['reg_prod_total'] / df['population']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4475,7 +4475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4488,13 +4488,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "# добавим признак 'Колличество инвалидов трудоспособного возраста\n",
     "# на 1000 человек населения региона' (чел)\n",
     "df['disabled_1000'] = df['disabled_18_60'] / df['population']*1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# добавим признак 'Колличество заболеваний установленных впервые\n",
+    "# на 1000 человек населения региона' (чел)\n",
+    "df['morbidity_1000'] = df['morbidity'] / df['population']*1000\n"
    ]
   },
   {
@@ -4507,7 +4518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -4542,7 +4553,6 @@
        "      <th>income</th>\n",
        "      <th>subsidies</th>\n",
        "      <th>...</th>\n",
-       "      <th>spec_manufact</th>\n",
        "      <th>spec_indust</th>\n",
        "      <th>spec_water_supply</th>\n",
        "      <th>spec_provision</th>\n",
@@ -4552,6 +4562,7 @@
        "      <th>newborn_1000</th>\n",
        "      <th>child_mortality_1000</th>\n",
        "      <th>disabled_1000</th>\n",
+       "      <th>morbidity_1000</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>region</th>\n",
@@ -4592,16 +4603,16 @@
        "      <td>56637.879730</td>\n",
        "      <td>74306.235370</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.561745e+11</td>\n",
-       "      <td>1.839420e+11</td>\n",
-       "      <td>4.511748e+09</td>\n",
-       "      <td>1.930862e+10</td>\n",
-       "      <td>3.678839e+11</td>\n",
+       "      <td>1.839420e+08</td>\n",
+       "      <td>4.511748e+06</td>\n",
+       "      <td>1.930862e+07</td>\n",
+       "      <td>3.678839e+08</td>\n",
        "      <td>21.153070</td>\n",
        "      <td>0.200551</td>\n",
        "      <td>8.620924</td>\n",
        "      <td>0.041862</td>\n",
        "      <td>26.488540</td>\n",
+       "      <td>144.602450</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Амурская область</th>\n",
@@ -4616,16 +4627,16 @@
        "      <td>51571.555319</td>\n",
        "      <td>34011.885547</td>\n",
        "      <td>...</td>\n",
-       "      <td>4.948314e+10</td>\n",
-       "      <td>2.560468e+11</td>\n",
-       "      <td>4.393894e+09</td>\n",
-       "      <td>5.442775e+10</td>\n",
-       "      <td>5.120936e+11</td>\n",
+       "      <td>2.560468e+08</td>\n",
+       "      <td>4.393894e+06</td>\n",
+       "      <td>5.442775e+07</td>\n",
+       "      <td>5.120936e+08</td>\n",
        "      <td>22.619247</td>\n",
        "      <td>0.378283</td>\n",
        "      <td>9.939953</td>\n",
        "      <td>0.053162</td>\n",
        "      <td>31.731144</td>\n",
+       "      <td>208.273210</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Архангельская область без Ненецкого АО</th>\n",
@@ -4640,20 +4651,20 @@
        "      <td>52963.993010</td>\n",
        "      <td>42447.952872</td>\n",
        "      <td>...</td>\n",
-       "      <td>2.372191e+11</td>\n",
-       "      <td>3.039603e+11</td>\n",
-       "      <td>5.356946e+09</td>\n",
-       "      <td>3.328323e+10</td>\n",
-       "      <td>6.079205e+11</td>\n",
+       "      <td>3.039603e+08</td>\n",
+       "      <td>5.356946e+06</td>\n",
+       "      <td>3.328323e+07</td>\n",
+       "      <td>6.079205e+08</td>\n",
        "      <td>20.708809</td>\n",
        "      <td>0.346995</td>\n",
        "      <td>8.152512</td>\n",
        "      <td>0.026546</td>\n",
        "      <td>24.701032</td>\n",
+       "      <td>517.697341</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3 rows × 52 columns</p>\n",
+       "<p>3 rows × 53 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -4675,29 +4686,23 @@
        "Амурская область                           105.2  571362.1  51571.555319   \n",
        "Архангельская область без Ненецкого АО     102.9  514200.4  52963.993010   \n",
        "\n",
-       "                                           subsidies  ...  spec_manufact  \\\n",
-       "region                                                ...                  \n",
-       "Алтайский край                          74306.235370  ...   1.561745e+11   \n",
-       "Амурская область                        34011.885547  ...   4.948314e+10   \n",
-       "Архангельская область без Ненецкого АО  42447.952872  ...   2.372191e+11   \n",
+       "                                           subsidies  ...   spec_indust  \\\n",
+       "region                                                ...                 \n",
+       "Алтайский край                          74306.235370  ...  1.839420e+08   \n",
+       "Амурская область                        34011.885547  ...  2.560468e+08   \n",
+       "Архангельская область без Ненецкого АО  42447.952872  ...  3.039603e+08   \n",
        "\n",
-       "                                         spec_indust  spec_water_supply  \\\n",
-       "region                                                                    \n",
-       "Алтайский край                          1.839420e+11       4.511748e+09   \n",
-       "Амурская область                        2.560468e+11       4.393894e+09   \n",
-       "Архангельская область без Ненецкого АО  3.039603e+11       5.356946e+09   \n",
+       "                                        spec_water_supply  spec_provision  \\\n",
+       "region                                                                      \n",
+       "Алтайский край                               4.511748e+06    1.930862e+07   \n",
+       "Амурская область                             4.393894e+06    5.442775e+07   \n",
+       "Архангельская область без Ненецкого АО       5.356946e+06    3.328323e+07   \n",
        "\n",
-       "                                        spec_provision  spec_reg_prod  \\\n",
-       "region                                                                  \n",
-       "Алтайский край                            1.930862e+10   3.678839e+11   \n",
-       "Амурская область                          5.442775e+10   5.120936e+11   \n",
-       "Архангельская область без Ненецкого АО    3.328323e+10   6.079205e+11   \n",
-       "\n",
-       "                                        childrens_percent  \\\n",
-       "region                                                      \n",
-       "Алтайский край                                  21.153070   \n",
-       "Амурская область                                22.619247   \n",
-       "Архангельская область без Ненецкого АО          20.708809   \n",
+       "                                        spec_reg_prod  childrens_percent  \\\n",
+       "region                                                                     \n",
+       "Алтайский край                           3.678839e+08          21.153070   \n",
+       "Амурская область                         5.120936e+08          22.619247   \n",
+       "Архангельская область без Ненецкого АО   6.079205e+08          20.708809   \n",
        "\n",
        "                                        child_orphanage_percent  newborn_1000  \\\n",
        "region                                                                          \n",
@@ -4705,16 +4710,22 @@
        "Амурская область                                       0.378283      9.939953   \n",
        "Архангельская область без Ненецкого АО                 0.346995      8.152512   \n",
        "\n",
-       "                                        child_mortality_1000  disabled_1000  \n",
-       "region                                                                       \n",
-       "Алтайский край                                      0.041862      26.488540  \n",
-       "Амурская область                                    0.053162      31.731144  \n",
-       "Архангельская область без Ненецкого АО              0.026546      24.701032  \n",
+       "                                        child_mortality_1000  disabled_1000  \\\n",
+       "region                                                                        \n",
+       "Алтайский край                                      0.041862      26.488540   \n",
+       "Амурская область                                    0.053162      31.731144   \n",
+       "Архангельская область без Ненецкого АО              0.026546      24.701032   \n",
        "\n",
-       "[3 rows x 52 columns]"
+       "                                        morbidity_1000  \n",
+       "region                                                  \n",
+       "Алтайский край                              144.602450  \n",
+       "Амурская область                            208.273210  \n",
+       "Архангельская область без Ненецкого АО      517.697341  \n",
+       "\n",
+       "[3 rows x 53 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4753,17 +4764,17 @@
     " \n",
     " * **welfare** - расходы на социальную политику от общих расходов бюджета региона (%);\n",
     "\n",
-    " * **mining** - объем добычи полезных ископаемых (млн.руб.);\n",
+    " * **mining** - объем добычи полезных ископаемых (руб.);\n",
     "\n",
-    " * **manufact** - объем обрабатывающих производств (млн.руб.);\n",
+    " * **manufact** - объем обрабатывающих производств (руб.);\n",
     "\n",
-    " * **indust** - объем промышленного производства (млн.руб.);\n",
+    " * **indust** - объем промышленного производства (руб.);\n",
     "\n",
-    " * **water_supply** - объем водоснабжения, организации сбора и утилизации отходов (млн.руб.);\n",
+    " * **water_supply** - объем водоснабжения, организации сбора и утилизации отходов (руб.);\n",
     " \n",
-    " * **provision** - объем обеспечения электроэнергией, газом и паром (млн.руб.);\n",
+    " * **provision** - объем обеспечения электроэнергией, газом и паром (руб.);\n",
     "\n",
-    " * **reg_prod_total** - общий объем регионального производства (млн.руб.);\n",
+    " * **reg_prod_total** - общий объем регионального производства (руб.);\n",
     "\n",
     " * **retail** - объем розничной торговли на душу населения за год (млн.руб);\n",
     "\n",
@@ -4807,15 +4818,15 @@
     "\n",
     " * **disabled_18_60** - число людей трудоспособного возраста с инвалидностью;\n",
     "\n",
-    " * **density** - плотность населения региона;\n",
+    " * **density** - плотность населения региона (чел./кв.км.);\n",
     "\n",
     " * **spec_income** - собственные доходы региона на душу населения (руб.);\n",
     "\n",
     " * **spec_subsidies** - федеральные дотации  на душу населения (руб.);\n",
     "\n",
-    " * **spec_mining** - удельный объем региональной добычи полезных искпаемых на душу населения (млн.руб.);\n",
+    " * **spec_mining** - удельный объем региональной добычи полезных искпаемых на душу населения (руб.);\n",
     "\n",
-    " * **spec_manufact** - удельный объем регионального обраьатывающего производства на душу населения (млн.руб.);\n",
+    " * **spec_manufact** - удельный объем регионального обраьатывающего производства на душу населения (руб.);\n",
     "\n",
     " * **spec_indust** - удельный объем регионального промышленного производства на душу населения (млн.руб.);\n",
     "\n",
@@ -4833,7 +4844,9 @@
     "\n",
     " * **child_mortality_1000** -детская смертность на 1000 человек населения региона (чел);\n",
     "\n",
-    " * **disabled_1000** - колличество инвалидов трудоспособного возраста на 1000 человек населения региона (чел).\n",
+    " * **disabled_1000** - колличество инвалидов трудоспособного возраста на 1000 человек населения региона (чел);\n",
+    "\n",
+    " * **morbidity_1000** - число зарегистрированных заболеваний у пациентов с диагнозом, установленном впервые в жизни на 1000 человек населения.\n",
     "\n",
     "\n",
     "\n",
